--- a/index.html
+++ b/index.html
@@ -7,12 +7,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <section>
+    <section><div>
+        <h1 id="nom"></h1>
+         <p id="frase"></p>
+         <button id="button"></button>
+         </div>
+    </section>
+
+    <script src="script.js" >
+        <section>
         <h1 id="nom"></h1>
          <p id="frase"></p>
          <button id="button"></button>
     </section>
-
-    <script src="script.js" ></script>
+    </script>
 </body>
 </html>
