--- a/index.html
+++ b/index.html
@@ -7,19 +7,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <section><div>
-        <h1 id="nom"></h1>
-         <p id="frase"></p>
-         <button id="button"></button>
-         </div>
+    <section>
+       <div id="header"></div>
+<div id="contenairedata"></div>
+<div id="fiche"></div>
+<div id="personne"></div>
+
+
+
     </section>
 
-    <script src="script.js" >
-        <section>
-        <h1 id="nom"></h1>
-         <p id="frase"></p>
-         <button id="button"></button>
-    </section>
-    </script>
+    <script src="script.js" ></script>
 </body>
 </html>
